creusot/tests/should_fail/bug/436_1.stderr
error[creusot]: called Logic function in Ghost context "prophecy"
  --> 436_1.rs:15:18
   |
15 |     b.g = gh! { !prophecy(b) };
   |                  ^^^^^^^^

error: aborting due to previous error

